# Fandoghshekn

./: .gitignore  Encryptor.java  README.md  example_config.json  gradle.properties  settings.gradle  settings.gradle.kts
.github/workflows/: android-build.yml  build.yml
Fandogh-Shekan/: settings.gradle
Fandogh-Shekan/.github/workflows/: build.yml
Fandogh-Shekan/app/: build.gradle
Fandogh-Shekan/app/src/main/assets/: index.html
Fandogh-Shekan/app/src/main/java/com/fandogh/shekan/: ConfigManager.java  FandoghVpnService.java  MainActivity.java
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: index.html
app/src/main/cpp/: CMakeLists.txt  native-lib.c  native-lib.cpp
app/src/main/java/com/fandogh/shekan/: AppLog.java  ConfigListAdapter.java  ConfigManager.java  ConfigModel.java  Encryptor.java  FandoghVpnService.java  MainActivity.java  PingManager.java
app/src/main/java/com/v2ray/ang/: MainActivity.kt
app/src/main/java/com/v2ray/ang/util/: ServerSelector.kt  VpnServiceManager.kt
app/src/main/res/: network_security_config.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
